tests/syntax_error/arg_default.jou
def foo(num: int = 1) -> None:  # Error: arguments cannot have default values
    return
